--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@ target/
 src/main/resources/output/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
